--- a/sendmoney.html
+++ b/sendmoney.html
@@ -8,84 +8,205 @@
   <title>Alke Wallet | Send Money</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/sendmoney.css">
 </head>
 
 <body>
-  <header>
-    <h1 id="app-title">Alke Wallet</h1>
-    <h2>Enviar dinero</h2>
-    <nav>
-      <ul>
-        <li><a href="login.html">Cerrar Sesión</a></li>
-        <li><a href="menu.html">Volver al menú</a></li>
-      </ul>
+  <header class="py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h1 class="display-4 mb-2" id="app-title">Alke Wallet</h1>
+          <h2 class="mb-4">Enviar dinero</h2>
+        </div>
+      </div>
+    </div>
+
+    <nav class="navbar navbar-expand-md navbar-custom py-3">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="menu.html">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-arrow-left me-1" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8" />
+                </svg>
+                Volver al menú
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-box-arrow-right me-1" viewBox="0 0 16 16">
+                  <path fill-rule="evenodd"
+                    d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z" />
+                  <path fill-rule="evenodd"
+                    d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z" />
+                </svg>
+                Cerrar Sesión
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
     </nav>
   </header>
-  <main>
-    <section>
-      <form action="" method="post">
-        <span id="to-account">Contacto seleccionado:</span>
-        <div>
-          John Doe - RUT:18.332.131-7 - Cuenta N°0023318332131
-        </div><br>
-        <label for="from-account">Cuenta de Origen</label><br>
-        <select name="from-account" id="from-account">
-          <option value="cuenta-0002311423">N°0002311423</option>
-          <option value="cuenta-0002355196">N°0002355196</option>
-          <option value="cuenta-0002378830">N°0002378830</option>
-        </select><br><br>
-        <label for="ammount">Monto</label><br>
-        <input type="number" name="ammount" id="ammount" min="1" placeholder="ej:5000">
-        <p id="available-balance"><em>Saldo disponible cta.: $140000</em></p>
-        <button type="submit">Enviar dinero</button><br><br>
-        <fieldset title="contacts">
-          <legend>Lista de Contactos</legend>
-          <label for="contact-name">Buscar contacto</label><br>
-          <input type="text" name="contact-name" id="contact-name">
-          <button type="button">+ Nuevo Contacto</button><br><br>
-          <table id="contact-table">
-            <thead>
-              <tr>
-                <th>Nombre</th>
-                <th>RUT</th>
-                <th>Número de Cuenta</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>Ismail Al-Kanabawi</td>
-                <td class="rut-column">33.121.311-0</td>
-                <td class="account-column">0023333121311</td>
-              </tr>
-              <tr>
-                <td>Khidir Karawita</td>
-                <td class="rut-column">33.098.711-k</td>
-                <td class="account-column">0023333098711</td>
-              </tr>
-              <tr>
-                <td>John Doe</td>
-                <td class="rut-column">18.332.131-7</td>
-                <td class="account-column">0023318332131</td>
-              </tr>
-              <tr>
-                <td>Muhammad Sumbul</td>
-                <td class="rut-column">33.320.755-4</td>
-                <td class="account-column">0023333320755</td>
-              </tr>
-            </tbody>
-          </table>
-        </fieldset>
-      </form>
-    </section>
+
+  <main class="py-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 col-lg-6 mb-4">
+          <!-- Formulario de transferencia -->
+          <section class="form-section">
+            <form action="" method="post">
+              <!-- Contacto seleccionado -->
+              <div class="selected-contact mb-4">
+                <p class="fw-medium mb-1">Contacto seleccionado:</p>
+                <div class="fw-bold">
+                  John Doe - RUT: 18.332.131-7 - Cuenta N°0023318332131
+                </div>
+              </div>
+
+              <!-- Cuenta de origen -->
+              <div class="mb-3">
+                <label for="from-account" class="form-label fw-medium">Cuenta de Origen</label>
+                <select class="form-select" name="from-account" id="from-account"
+                  aria-label="Seleccionar cuenta de origen">
+                  <option value="cuenta-0002311423">N°0002311423</option>
+                  <option value="cuenta-0002355196">N°0002355196</option>
+                  <option value="cuenta-0002378830">N°0002378830</option>
+                </select>
+              </div>
+
+              <!-- Monto -->
+              <div class="mb-3">
+                <label for="ammount" class="form-label fw-medium">Monto a transferir</label>
+                <div class="input-group">
+                  <span class="input-group-text">$</span>
+                  <input type="number" class="form-control" name="ammount" id="ammount" min="1"
+                    placeholder="Ejemplo: 5000" aria-label="Monto a transferir">
+                </div>
+                <div class="form-text">Monto mínimo: $1</div>
+              </div>
+
+              <!-- Saldo disponible -->
+              <div class="balance-info mb-4">
+                <p class="mb-0" id="available-balance"><em>Saldo disponible cuenta seleccionada: <span
+                      class="text-success fw-medium">$140.000</span></em></p>
+              </div>
+
+              <!-- Botón de envío -->
+              <button type="submit" class="btn btn-primary btn-lg w-100">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+                  class="bi bi-send me-2" viewBox="0 0 16 16">
+                  <path
+                    d="M15.854.146a.5.5 0 0 1 .11.54l-5.819 14.547a.75.75 0 0 1-1.329.124l-3.178-4.995L.643 7.184a.75.75 0 0 1 .124-1.33L15.314.037a.5.5 0 0 1 .54.11ZM6.636 10.07l2.761 4.338L14.13 2.576zm6.787-8.201L1.591 6.602l4.339 2.76z" />
+                </svg>
+                Enviar dinero
+              </button>
+            </form>
+          </section>
+        </div>
+
+        <div class="col-12 col-lg-6">
+          <!-- Lista de contactos -->
+          <section class="contacts-section">
+            <h4 class="mb-4">Lista de Contactos</h4>
+
+            <!-- Buscar contacto -->
+            <div class="mb-4">
+              <div class="d-flex flex-wrap gap-2 mb-3">
+                <input type="text" class="form-control flex-grow-1" name="contact-name" id="contact-name"
+                  placeholder="Buscar contacto por nombre">
+                <button type="button" class="btn btn-outline-primary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                    class="bi bi-person-plus me-1" viewBox="0 0 16 16">
+                    <path
+                      d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z" />
+                    <path fill-rule="evenodd"
+                      d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5" />
+                  </svg>
+                  Nuevo Contacto
+                </button>
+              </div>
+            </div>
+
+            <!-- Tabla de contactos -->
+            <div class="table-responsive">
+              <table class="table table-hover mb-0" id="contact-table">
+                <thead>
+                  <tr>
+                    <th>Nombre</th>
+                    <th>RUT</th>
+                    <th>Número de Cuenta</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="contact-row">
+                    <td>Ismail Al-Kanabawi</td>
+                    <td class="rut-column">33.121.311-0</td>
+                    <td class="account-column">0023333121311</td>
+                  </tr>
+                  <tr class="contact-row">
+                    <td>Khidir Karawita</td>
+                    <td class="rut-column">33.098.711-k</td>
+                    <td class="account-column">0023333098711</td>
+                  </tr>
+                  <tr class="contact-row selected">
+                    <td>John Doe</td>
+                    <td class="rut-column">18.332.131-7</td>
+                    <td class="account-column">0023318332131</td>
+                  </tr>
+                  <tr class="contact-row">
+                    <td>Muhammad Sumbul</td>
+                    <td class="rut-column">33.320.755-4</td>
+                    <td class="account-column">0023333320755</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+            <div class="alert alert-info mt-3">
+              <small><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                  class="bi bi-info-circle me-1" viewBox="0 0 16 16">
+                  <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                  <path
+                    d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0" />
+                </svg> Haz clic en un contacto para seleccionarlo como destinatario.</small>
+            </div>
+          </section>
+        </div>
+      </div>
+    </div>
   </main>
-  <div>
-    <a href="#app-title">Ir arriba</a>
+
+  <div class="back-to-top">
+    <a href="#app-title" class="btn btn-outline-secondary btn-sm">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up me-1"
+        viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5" />
+      </svg>
+      Ir arriba
+    </a>
   </div>
-  <footer>
-    <p>
-      &copy; Alke Wallet 2025
-    </p>
+
+  <footer class="py-3">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-center">
+          <p class="mb-0">&copy; Alke Wallet 2025</p>
+        </div>
+      </div>
+    </div>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
